Project

General

Profile

Actions

Bug #10447

closed

ACPI binaries should be reproducible

Added by Joshua M. Clulow over 4 years ago. Updated over 2 years ago.

Status:
Closed
Priority:
Normal
Category:
cmd - userland programs
Start date:
2019-02-25
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

When running wsdiff against two workspaces with no changes to the ACPI tools, I noticed they nonetheless appear to have some differences:

usr/sbin/iasl
NOTE: ELF .rodata difference detected.

43468,43471c43468,43471
< 1315720   i   m   e   :       %   s       %   s  \n  \0   0   0   :   1
<         3a656d69 20732520 000a7325 313a3030
< 1315740   1   :   4   6  \0   F   e   b       2   5       2   0   1   9
<         36343a31 62654600 20353220 39313032
---
> 1315720   i   m   e   :       %   s       %   s  \n  \0   0   1   :   2
>         3a656d69 20732520 000a7325 323a3130
> 1315740   9   :   5   8  \0   F   e   b       2   5       2   0   1   9
>         38353a39 62654600 20353220 39313032

usr/sbin/acpixtract
NOTE: ELF .rodata difference detected.

314,315c314,315
< 0005220   0   0   :   1   1   :   2   7  \0   F   e   b       2   5    
<         313a3030 37323a31 62654600 20353220
---
> 0005220   0   1   :   2   9   :   3   5  \0   F   e   b       2   5    
>         323a3130 35333a39 62654600 20353220

usr/sbin/acpidump
NOTE: ELF .rodata difference detected.

442,443c442,443
< 0007320   8   X  \n   %   s  \n  \n  \0   0   0   :   1   1   :   2   7
<         250a5838 000a0a73 313a3030 37323a31
---
> 0007320   8   X  \n   %   s  \n  \n  \0   0   1   :   2   9   :   3   5
>         250a5838 000a0a73 323a3130 35333a39

It would appear that these timestamps are included in support of an unhelpful command-line option:

root@jenkins-oi0:~# /usr/sbin/acpidump --help
Illegal option: --
Usage: acpidump [options]
Options:
...
  -v                  Display version information
  -vd                 Display build date and time
...

The output of -vd is, e.g.,

root@jenkins-oi0:~# /usr/sbin/acpidump -vd

Intel ACPI Component Architecture
ACPI Binary Table Dump Utility version 20180629
Copyright (c) 2000 - 2018 Intel Corporation

Build date/time: Feb 24 2019 00:53:37

We should figure out a way to patch this out of our copy of the tools. Note that we don't necessarily just want to patch the source in the tree directly. See notes in #9824 for how we're managing ACPI updates.

Actions #1

Updated by Joshua M. Clulow over 4 years ago

  • Description updated (diff)
Actions #2

Updated by Robert Mustacchi over 2 years ago

  • Assignee set to Robert Mustacchi
Actions #3

Updated by Electric Monk over 2 years ago

  • Gerrit CR set to 1094
Actions #4

Updated by Robert Mustacchi over 2 years ago

I tested this in two ways. The first was by running the updated acpi binaries to make sure we got the updated version information. The second was by running wsdiff across two builds of the same workspace and verifying that they no longer had any wsdiff noise.

Actions #5

Updated by Electric Monk over 2 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit 20a2a10f2c0bcd395700659efe34b54ab4404444

commit  20a2a10f2c0bcd395700659efe34b54ab4404444
Author: Robert Mustacchi <rm@fingolfin.org>
Date:   2021-01-12T23:26:12.000Z

    10447 ACPI binaries should be reproducible
    Reviewed by: Andy Fiddaman <andy@omnios.org>
    Reviewed by: Paul Winder <paul@winder.uk.net>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF