10447 ACPI binaries should be reproducible Reviewed by: Andy Fiddaman <andy@omnios.org> Reviewed by: Paul Winder <paul@winder.uk.net> Approved by: Dan McDonald <danmcd@joyent.com>